# cpts-warno-mods

./: .gitignore  INFODUMP.md  README.md  TODO.md  config.env  pyproject.toml
docs/: TODO.md
docs/HarderToSpotInfantry/: UnitStealthInfo.md
docs/YIMBY/: README.md
image_source/: preview.tif
lib/: main.bat
lib/command/: create.bat  generate.bat  get_config.bat  launch.bat  process.bat  update_config.bat
lib/python/: setup_parsing.py
mods/DoubleSupply/: README.md  modify_values.py
mods/Entrench/: README.md  modify_values.py
mods/HarderToSpotInfantry/: modify_values.py
mods/TripleSupply/: Info.md  README.md  modify_values.py
mods/YIMBY/: README.md  extract_terrains_list.py  modify_values.py
parse/Debug/: modify_values.py
parse/DoubleSupply/: modify_values.py
parse/HarderToSpotInfantry/: modify_infantry_concealment.py
parse/TripleSupply/: modify_values.py  triple_supply_values.py
parse/YIMBY/: buff_buildings.py
tools/: create_new_mod.bat  generate_mod.bat  get_mod_config_values.bat  load_env.py  main.bat  process_mod_info.bat  setup_env.py  update_mod_config.bat  update_mods.bat  upload_mod.bat
