[project]
name = "cpts-warno-mods"
version = "0.1.0"
description = ""
authors = [
    {name = "Jens Brandenburg",email = "jens@jbrandenburg.de"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ndf-parse (>=0.2.0,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
